--- a/package.json
+++ b/package.json
@@ -1,25 +1,19 @@
 {
-  "name": "node-emails-from-csv",
+  "name": "exposys",
   "version": "1.0.0",
-  "description": "A simple NodeJS application that helps sending emails for events. Uses CSV files for target users.",
+  "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": [
-    "csv",
-    "modus",
-    "script"
-  ],
-  "author": "ahsan.ubitian@gmail.com",
-  "repository": {
-    "url": "https://github.com/lifeofsoumya"
-  },
+  "author": "",
   "license": "ISC",
   "dependencies": {
-    "async": "^2.6.0",
+    "body-parser": "^1.20.0",
     "csv": "^6.2.0",
-    "handlebars": "^4.0.11",
+    "csv-parse": "^5.3.0",
+    "dotenv": "^16.0.1",
+    "express": "^4.18.1",
     "nodemailer": "^6.7.7"
   }
 }
